# AOC2023

./: CMakeLists.txt  day_01.cpp  util.cpp
include/: util.hpp
